MODON MRE BPDEV/force-app/main/default/objects/Checkout_Payment__c/Checkout_Payment__c.object-meta.xml
<CustomObject>
    <description>Tracks the lifecycle of a Checkout.com payment link and its resulting payment.</description>
    <label>Checkout Payment</label>
    <nameField>
        <displayFormat>CP-{00000}</displayFormat>
        <label>Checkout Payment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checkout Payments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>