MODON MRE BPDEV/force-app/main/default/objects/Checkout_Payment__c/fields/Account_Last4__c.field-meta.xml
<CustomField>
    <fullName>Account_Last4__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Account/IBAN Last 4</label>
    <length>4</length>
    <type>Text</type>
</CustomField>