MODON MRE BPDEV/force-app/main/default/objects/Checkout_Payment__c/fields/Bedrooms__c.field-meta.xml
<CustomField>
    <fullName>Bedrooms__c</fullName>
    <description>Bedrooms the customer was buying, from the EOI payload. Stamped when the link is raised so a payment that never becomes an EOI still carries it.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Bedrooms</label>
    <length>40</length>
    <type>Text</type>
</CustomField>