MODON MRE BPDEV/force-app/main/default/objects/Checkout_Payment__c/fields/Booking_Ref__c.field-meta.xml
<CustomField>
    <fullName>Booking_Ref__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Booking Ref</label>
    <length>100</length>
    <type>Text</type>
</CustomField>