MODON MRE BPDEV/force-app/main/default/objects/Checkout_Payment__c/fields/Bulk_Action__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Action__c</fullName>
    <description>Action to be taken in bulk on this record.</description>
    <label>Bulk Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Capture</fullName>
            </value>
            <value>
                <fullName>Void</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>