MODON MRE BPDEV/force-app/main/default/objects/Checkout_Payment__c/fields/Capture_Mode__c.field-meta.xml
<CustomField>
    <fullName>Capture_Mode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Capture Mode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>