MODON MRE BPDEV/force-app/main/default/objects/Checkout_Payment__c/fields/Card_BIN__c.field-meta.xml
<CustomField>
    <fullName>Card_BIN__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Card BIN</label>
    <length>8</length>
    <type>Text</type>
</CustomField>