MODON MRE BPDEV/force-app/main/default/objects/Checkout_Payment__c/fields/Card_Category__c.field-meta.xml
<CustomField>
    <fullName>Card_Category__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Card Category</label>
    <length>30</length>
    <type>Text</type>
</CustomField>