MODON MRE BPDEV/force-app/main/default/objects/Checkout_Payment__c/fields/Card_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Card_Expiry__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Card Expiry</label>
    <length>7</length>
    <type>Text</type>
</CustomField>