MODON MRE BPDEV/force-app/main/default/objects/Checkout_Payment__c/fields/Card_Scheme__c.field-meta.xml
<CustomField>
    <fullName>Card_Scheme__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Card Scheme</label>
    <length>20</length>
    <type>Text</type>
</CustomField>