MODON MRE BPDEV/force-app/main/default/objects/Checkout_Payment__c/fields/Customer_Concern__c.field-meta.xml
<CustomField>
    <fullName>Customer_Concern__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether customer concern / consent was confirmed prior to payment.</description>
    <label>Customer Concern</label>
    <type>Checkbox</type>
</CustomField>