MODON MRE BPDEV/force-app/main/default/objects/Checkout_Payment__c/fields/Customer_Phone__c.field-meta.xml
<CustomField>
    <fullName>Customer_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Phone</label>
    <type>Phone</type>
</CustomField>