MODON MRE BPDEV/force-app/main/default/objects/Checkout_Payment__c/fields/EOI_Site_Batch__c.field-meta.xml
<CustomField>
    <fullName>EOI_Site_Batch__c</fullName>
    <description>Public EOI microsite pay-first: BatchId__c of the EOI_Public_Registration__c rows this payment&apos;s finalize wrote. Joins the payment to its own staging batch (a registration can hold one batch per paid residence type). Set only by EOIService. (Aurelix)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>EOI Site Batch</label>
    <length>40</length>
    <type>Text</type>
</CustomField>