MODON MRE BPDEV/force-app/main/default/objects/Checkout_Payment__c/fields/EOI_Site_Range__c.field-meta.xml
<CustomField>
    <fullName>EOI_Site_Range__c</fullName>
    <description>Public EOI microsite pay-first: id of the EOI_Range__c this payment pays for. Each residence type is a separate payment; set only by EOIService at link creation. Blank on pre-per-type payments, which covered the whole selection. (Aurelix)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>EOI Site Range</label>
    <length>18</length>
    <type>Text</type>
</CustomField>