MODON MRE BPDEV/force-app/main/default/objects/Checkout_Payment__c/fields/EOI_Site_Refund_Requested__c.field-meta.xml
<CustomField>
    <fullName>EOI_Site_Refund_Requested__c</fullName>
    <description>Public EOI microsite: when the verified customer asked for this payment to be refunded from the site&apos;s returning-customer view. Ops works a list view on this field and executes with the console Refund button; the site sweeper&apos;s reconciliation stage then closes the records. Set only by EOIService. (Aurelix)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>EOI Site Refund Requested</label>
    <type>DateTime</type>
</CustomField>