MODON MRE BPDEV/force-app/main/default/objects/Checkout_Payment__c/fields/EOI_Site_Registration__c.field-meta.xml
<CustomField>
    <fullName>EOI_Site_Registration__c</fullName>
    <description>Public EOI microsite pay-first: id of the EOI_Public_Registration__c this payment registers. Set only by EOIService; marks the row as a microsite payment. (Aurelix)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>EOI Site Registration</label>
    <length>18</length>
    <type>Text</type>
</CustomField>