MODON MRE BPDEV/force-app/main/default/objects/Checkout_Payment__c/fields/EOI_Site_Selection__c.field-meta.xml
<CustomField>
    <fullName>EOI_Site_Selection__c</fullName>
    <description>Public EOI microsite pay-first: server-priced selection snapshot (JSON) stashed at link creation and applied verbatim at finalisation. Never read by console code. (Aurelix)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>EOI Site Selection</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>