MODON MRE BPDEV/force-app/main/default/objects/Checkout_Payment__c/fields/EOI_Site_State__c.field-meta.xml
<CustomField>
    <fullName>EOI_Site_State__c</fullName>
    <description>Public EOI microsite pay-first lifecycle: blank = captured awaiting registration; Finalized = staging batch written; Completed = EOI + receipts linked; Duplicate = another payment already registered this registration (refund case). (Aurelix)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>EOI Site State</label>
    <length>40</length>
    <type>Text</type>
</CustomField>