MODON MRE BPDEV/force-app/main/default/objects/Checkout_Payment__c/fields/Expires_On__c.field-meta.xml
<CustomField>
    <fullName>Expires_On__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Expires On</label>
    <type>DateTime</type>
</CustomField>