MODON MRE BPDEV/force-app/main/default/objects/Checkout_Payment__c/fields/Expression_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Expression_of_Interest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Expression of Interest</label>
    <referenceTo>Expressionofinterest__c</referenceTo>
    <relationshipLabel>Checkout Payments</relationshipLabel>
    <relationshipName>Checkout_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>