MODON MRE BPDEV/force-app/main/default/objects/Checkout_Payment__c/fields/Held_Unit_Id__c.field-meta.xml
<CustomField>
    <fullName>Held_Unit_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Held Unit Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>