MODON MRE BPDEV/force-app/main/default/objects/Checkout_Payment__c/fields/Last_Checkout_Status__c.field-meta.xml
<CustomField>
    <fullName>Last_Checkout_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Checkout Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>