MODON MRE BPDEV/force-app/main/default/objects/Checkout_Payment__c/fields/Last_Polled__c.field-meta.xml
<CustomField>
    <fullName>Last_Polled__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Polled</label>
    <type>DateTime</type>
</CustomField>