MODON MRE BPDEV/force-app/main/default/objects/Checkout_Payment__c/fields/Last_Renewal_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Last_Renewal_Attempt__c</fullName>
    <description>When the renewal job last tried this hold, win or lose. It paces pre-expiry renewals to one a day however often the job wakes; recovery ignores it and keeps its full six-hourly run.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The last time we tried to renew or recover this hold.</inlineHelpText>
    <label>Last Renewal Attempt</label>
    <type>DateTime</type>
</CustomField>