MODON MRE BPDEV/force-app/main/default/objects/Checkout_Payment__c/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <description>Opportunity lead source, copied when the link is raised. Not derived from the running user: the business vocabulary (Broker Portal, Ambassador, Broker - Egypt and so on) is finer than Site, Broker or Sales.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Lead Source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>