MODON MRE BPDEV/force-app/main/default/objects/Checkout_Payment__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Opportunity the payment was raised against. A declined payment never creates an EOI, so without this it has nothing to navigate to.</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Checkout Payments</relationshipLabel>
    <relationshipName>Checkout_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>