MODON MRE BPDEV/force-app/main/default/objects/Checkout_Payment__c/fields/Payment_Link_Id__c.field-meta.xml
<CustomField>
    <fullName>Payment_Link_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Payment Link Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>