MODON MRE BPDEV/force-app/main/default/objects/Checkout_Payment__c/fields/Payment_Link_Url__c.field-meta.xml
<CustomField>
    <fullName>Payment_Link_Url__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Payment Link URL</label>
    <type>Url</type>
</CustomField>