MODON MRE BPDEV/force-app/main/default/objects/Checkout_Payment__c/fields/Payment_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Payment_Purpose__c</fullName>
    <label>Payment Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ADM Fee</fullName>
            </value>
            <value>
                <fullName>Down Payment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>