MODON MRE BPDEV/force-app/main/default/objects/Checkout_Payment__c/fields/Portal_Initiated__c.field-meta.xml
<CustomField>
    <fullName>Portal_Initiated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set when the payment was raised from the customer portal via a Hosted Payments Page session. The customer is redirected in-session, so the &quot;payment link&quot; notification is suppressed for these records.</description>
    <label>Portal Initiated</label>
    <type>Checkbox</type>
</CustomField>