MODON MRE BPDEV/force-app/main/default/objects/Checkout_Payment__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Project the payment was raised against, from the EOI payload.</description>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Checkout Payments</relationshipLabel>
    <relationshipName>Checkout_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>