MODON MRE BPDEV/force-app/main/default/objects/Checkout_Payment__c/fields/Re_Issued__c.field-meta.xml
<CustomField>
    <fullName>Re_Issued__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This link replaced an earlier one that had run out. Report on it to see how often links are being re-raised, and by whom.</description>
    <inlineHelpText>This payment link was raised to replace an earlier one that had expired.</inlineHelpText>
    <label>Re-Issued</label>
    <type>Checkbox</type>
</CustomField>