MODON MRE BPDEV/force-app/main/default/objects/Checkout_Payment__c/fields/Receipt__c.field-meta.xml
<CustomField>
    <fullName>Receipt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Receipt</label>
    <referenceTo>Receipt__c</referenceTo>
    <relationshipLabel>Checkout Payments</relationshipLabel>
    <relationshipName>Checkout_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>