MODON MRE BPDEV/force-app/main/default/objects/Checkout_Payment__c/fields/Recovery_Alert_Sent__c.field-meta.xml
<CustomField>
    <fullName>Recovery_Alert_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The hold lapsed, every attempt to take it again failed, and the business has been emailed. Stops further attempts. Set by CheckoutHoldRenewalQueueable.</description>
    <inlineHelpText>We could not take this deposit again and the business has been told. Filter on this to see which customers need contacting for a fresh hold.</inlineHelpText>
    <label>Recovery Alert Sent</label>
    <type>Checkbox</type>
</CustomField>