MODON MRE BPDEV/force-app/main/default/objects/Checkout_Payment__c/fields/Reference__c.field-meta.xml
<CustomField>
    <fullName>Reference__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Reference</label>
    <length>100</length>
    <type>Text</type>
</CustomField>