MODON MRE BPDEV/force-app/main/default/objects/Checkout_Payment__c/fields/Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Order</label>
    <referenceTo>SalesOrder__c</referenceTo>
    <relationshipLabel>Checkout Payments</relationshipLabel>
    <relationshipName>Checkout_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>