MODON MRE BPDEV/force-app/main/default/objects/Checkout_Payment__c/fields/SO_Creation_Payload__c.field-meta.xml
<CustomField>
    <fullName>SO_Creation_Payload__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SO Creation Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>