MODON MRE BPDEV/force-app/main/default/objects/Checkout_Payment__c/fields/Source_Id__c.field-meta.xml
<CustomField>
    <fullName>Source_Id__c</fullName>
    <description>Checkout payment instrument id (src_...) returned on the payment source. Required to reauthorise a held payment as a merchant initiated transaction before the authorisation expires.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Source Id</label>
    <length>64</length>
    <type>Text</type>
</CustomField>