MODON MRE BPDEV/force-app/main/default/objects/Checkout_Payment__c/fields/Superseded__c.field-meta.xml
<CustomField>
    <fullName>Superseded__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A later link replaced this one, so reports should not count it. Set at creation of the replacement, only on a link whose expiry had already passed with no money on it.</description>
    <inlineHelpText>This request was replaced by a later payment link. Filter it out to see the true position.</inlineHelpText>
    <label>Superseded</label>
    <type>Checkbox</type>
</CustomField>