MODON MRE BPDEV/force-app/main/default/objects/Checkout_Payment__c/fields/Unit_Type__c.field-meta.xml
<CustomField>
    <fullName>Unit_Type__c</fullName>
    <description>Unit type from the EOI payload, for example Villa.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Unit Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>